[gd_scene load_steps=9 format=3 uid="uid://pti7ed7ufnvi"]

[ext_resource type="Script" uid="uid://bepwvplewns13" path="res://scripts/player.gd" id="1_3vyb7"]

[sub_resource type="CylinderMesh" id="CylinderMesh_3vyb7"]
height = 3.0
radial_segments = 5

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3vyb7"]
height = 3.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3vyb7"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_g2els"]
material = SubResource("StandardMaterial3D_3vyb7")
size = Vector3(0.1, 0.1, 3)

[sub_resource type="AudioStreamGenerator" id="AudioStreamGenerator_3vyb7"]

[sub_resource type="AudioStreamGenerator" id="AudioStreamGenerator_g2els"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_3vyb7"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath(".:seed")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath(".:places_digged")
properties/3/spawn = true
properties/3/replication_mode = 2

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_3vyb7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
mesh = SubResource("CylinderMesh_3vyb7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("CapsuleShape3D_3vyb7")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="Pointer" type="MeshInstance3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.4)
mesh = SubResource("BoxMesh_g2els")
skeleton = NodePath("../..")

[node name="Marker3D" type="Marker3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.9)

[node name="PlayerNameLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.5, 0)
text = "pre-kris deltarune"

[node name="ProxNetwork" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, -0.2)
stream = SubResource("AudioStreamGenerator_3vyb7")

[node name="ProxLocal" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, -0.2)
stream = SubResource("AudioStreamGenerator_g2els")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_3vyb7")

[node name="VoxelViewer" type="VoxelViewer" parent="."]
